# CMGG_FS_ML

./: LICENSE  README.md  hello.py  pyproject.toml
code/: DOS_editter.ipynb  config.json  data_processor.py  main.ipynb  pca_processor.py
code_test/code_test/: DOS_editter.ipynb  PCA.ipynb  data_make.ipynb
code_test/code_test/data/: spin_polalization_article.csv
code_test/code_test/data/TDOS/: Ga0.01Ge0.99_TDOS.csv  Ga0.03Ge0.97_TDOS.csv  Ga0.06Ge0.94_TDOS.csv  Ga0.08Ge0.92_TDOS.csv  Ga0.09Ge0.91_TDOS.csv  Ga0.11Ge0.89_TDOS.csv  Ga0.12Ge0.88_TDOS.csv  Ga0.15Ge0.85_TDOS.csv  Ga0.17Ge0.83_TDOS.csv  (+39 more)
data/: spin_polarization_article.csv
data/TDOS/: Ga0.02Ge0.98_TDOS.csv  Ga0.04Ge0.96_TDOS.csv  Ga0.05Ge0.95_TDOS.csv  Ga0.07Ge0.93_TDOS.csv  Ga0.10Ge0.90_TDOS.csv  Ga0.13Ge0.87_TDOS.csv  Ga0.14Ge0.86_TDOS.csv  Ga0.16Ge0.84_TDOS.csv  Ga0.18Ge0.82_TDOS.csv  Ga0.20Ge0.80_TDOS.csv  Ga0.21Ge0.79_TDOS.csv  Ga0.22Ge0.78_TDOS.csv  Ga0.24Ge0.76_TDOS.csv  Ga0.28Ge0.72_TDOS.csv  Ga0.29Ge0.71_TDOS.csv  Ga0.32Ge0.68_TDOS.csv  Ga0.34Ge0.66_TDOS.csv  Ga0.37Ge0.63_TDOS.csv  Ga0.38Ge0.62_TDOS.csv  Ga0.40Ge0.60_TDOS.csv  Ga0.43Ge0.57_TDOS.csv  Ga0.45Ge0.55_TDOS.csv  Ga0.46Ge0.54_TDOS.csv  Ga0.49Ge0.51_TDOS.csv  Ga0.50Ge0.50_TDOS.csv  Ga0.51Ge0.49_TDOS.csv  Ga0.53Ge0.47_TDOS.csv  Ga0.55Ge0.45_TDOS.csv  Ga0.56Ge0.44_TDOS.csv  Ga0.59Ge0.41_TDOS.csv  Ga0.61Ge0.39_TDOS.csv  Ga0.62Ge0.38_TDOS.csv  Ga0.64Ge0.36_TDOS.csv  Ga0.66Ge0.34_TDOS.csv  Ga0.67Ge0.33_TDOS.csv  Ga0.69Ge0.31_TDOS.csv  Ga0.70Ge0.30_TDOS.csv  Ga0.71Ge0.29_TDOS.csv  Ga0.73Ge0.27_TDOS.csv  Ga0.75Ge0.25_TDOS.csv  (+11 more)
(+599 files in other folders)
